updated README and added <title>

--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap" rel="stylesheet">
   <!-- Custom CSS -->
   <link rel="stylesheet" href="css/styles.css">
+
+  <title>Frontend Mentor | Stats preview card component</title>
 </head>
 
 <body>
   <div class="grid container">
     <main>
-      <h1 class="sr-only">Frontend Mentor | Stats preview card component</h1>
+      <h1 class="sr-only">Stats preview card component</h1>
       <div class="card | flex | bg-primary-600">
         <picture class="bg-primary-400">
             <source srcset="images/image-header-desktop.jpg" media="(min-width: 65em)">
